Fixed login form size bug on mobile.

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -232,7 +232,6 @@ label {
 }
 
 .i-logo {
-  margin-top: 60px;
   margin-bottom: 30px;
   overflow: visible;
   display: block;
@@ -243,7 +242,8 @@ label {
 .login-form, .register-form {
   margin: 30px auto;
   padding: 40px 33px;
-  width: 385px;
+  width: auto;
+  max-width: 385px;
   background: #ffffff;
   border: 1px solid #CCCCCC;
   border-radius: 2px;
